--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,8 @@ body {
   left: 20px;
   right: 20px;
   bottom: 20px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  overflow: auto; }
   .wall:after {
     display: block;
     content: "";
@@ -56,10 +57,6 @@ body {
   position: relative;
   width: 100%;
   height: 100%; }
-
-.wall-section {
-  overflow-x: hidden;
-  overflow-y: auto; }
 
 .wall-profiles {
   list-style-type: none; }
@@ -95,7 +92,8 @@ body {
   right: 10%;
   z-index: 999;
   background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); }
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  overflow: auto; }
   .wall-details.active {
     display: block; }
   .wall-details h1 {
